src/objects/npsp__General_Accounting_Unit__c.object
<CustomObject>
    <description>Accounting units used for allocating Opportunities.</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether this General Accounting Unit is available for selection on Allocations. Only active General Accounting Units are available for selection.</description>
        <inlineHelpText>Determines whether this General Accounting Unit is available for selection on Allocations. Only active General Accounting Units are available for selection.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Average_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The average amount of all Allocations to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The average amount of all Allocations to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Average Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <description>Additional information about this General Accounting Unit.</description>
        <inlineHelpText>Additional information about this General Accounting Unit.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__First_Allocation_Date__c</fullName>
        <description>The Close Date of the first Opportunity allocated to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The Close Date of the first Opportunity allocated to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>First Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of the largest Allocation to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The amount of the largest Allocation to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Largest Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Allocation_Date__c</fullName>
        <description>The last Opportunity Close Date of an allocation associated with this general accounting unit.</description>
        <inlineHelpText>The last Opportunity Close Date of an allocation associated with this general accounting unit.</inlineHelpText>
        <label>Last Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</inlineHelpText>
        <label>Number of Allocations Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of Allocations last year from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total number of Allocations last year from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Number of Allocations Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_This_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of Allocations this year from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>TThe total number of Allocations this year from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Number of Allocations This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Two_Years_Ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of Allocations two years ago from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total number of Allocations two years ago from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Number of Allocations Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Smallest_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of the smallest Allocation to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The amount of the smallest Allocation to this General Accounting Unit. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Smallest Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Allocations from Closed/Won Opportunities in the last N days. (The value of N is set in NPSP Settings, under Donations, GAU Allocations.) NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The number of Allocations from Closed/Won Opportunities in the last N days. (The value of N is set in NPSP Settings, under Donations, GAU Allocations.) NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Total Allocations Last N Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage last year.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage last year.</inlineHelpText>
        <label>Total Allocations Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_This_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount from Allocations from Closed/Won Opportunities this year. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total amount from Allocations from Closed/Won Opportunities this year. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Total Allocations This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Two_Years_Ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount from Allocations from Closed/Won Opportunities two years ago. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total amount from Allocations from Closed/Won Opportunities two years ago. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Total Allocations Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount from all Allocations from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total amount from all Allocations from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Total Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Number_of_Allocations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of Allocations from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</description>
        <inlineHelpText>The total number of Allocations from Closed/Won Opportunities. NPSP updates this field in a nightly Scheduled Job.</inlineHelpText>
        <label>Total Number of Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>General Accounting Unit</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Description__c</columns>
        <columns>npsp__Total_Allocations_This_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>General Accounting Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Accounting Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>